# sensor-station

AngularFrontend/: README.md  angular.json  package-lock.json  package.json
AngularFrontend/src/app/: app.config.ts  app.html  app.spec.ts  app.ts  static-data-editing-service.spec.ts  static-data-editing-service.ts  station-service.ts
AngularFrontend/src/app/map-component/: map-component.html  map-component.ts
AngularFrontend/src/app/station-display-container/: station-display-container.css  station-display-container.html  station-display-container.spec.ts  station-display-container.ts
AngularFrontend/src/app/station-display-container/station-display-details/: station-display-details.css  station-display-details.html  station-display-details.spec.ts  station-display-details.ts
AngularFrontend/src/app/station-display-container/station-display-summary/: station-display-summary.css  station-display-summary.html  station-display-summary.spec.ts  station-display-summary.ts
arduino/: serial.ino
arduino/sensor.ino/: sensor.ino.ino
arduino/serial/: serial.ino
python/: serial_tcp_bridge.py
sensor_station/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  requirements.txt
sensor_station/app/: sensorstation.py
sensor_station/app/config/: config.yaml
sensor_station/app/sensors/: altitude.py  co2.py  humidity.py  pressure.py  temperature.py  thermalcamera.py
sensor_station/protobuf/: sensor.proto
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: api.rs  config.rs  main.rs  sensor.rs  setup.sql
(+15 files in other folders)
