[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = "0.4.44"
futures = "0.3.32"
rustls = { version = "0.23.38", features = ["ring"] }
rustls-native-certs = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = "0.7.17"
tokio-postgres-rustls = "0.13.0"
tower-http = { version = "0.6.8", features = ["fs"] }
