[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bit-vec = "0.9.1"
chrono = "0.4.44"
futures = "0.3.32"
prost = "0.12"
rustls = { version = "0.23.38", features = ["ring"] }
rustls-native-certs = "0.8.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-bit-vec-0_9", "with-chrono-0_4"] }
tokio-postgres-rustls = "0.13.0"
tokio-serial = "5.4.5"
tower-http = { version = "0.6.8", features = ["fs"] }
